--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,5 @@
-
+server.application.name=default
+eureka.instance.prefer-ip-address=true
+eureka.client.registerWithEureka = true
+eureka.client.fetchRegistry = true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
