--- a/application-prod.properties
+++ b/application-prod.properties
@@ -1,5 +1,12 @@
-spring.application.name = config-production
-eureka.instance.prefer-ip-address=true
-eureka.client.registerWithEureka = true
-eureka.client.fetchRegistry = true
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring:
+  application:
+    name: config-production
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
